Fix breaking line of heading on mobile

--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -38,7 +38,7 @@ p a:visited {
 .heading {
 	/* “WHAT NEXT?’’: */
 	font-weight: 900;
-	font-size: 25px;
+	font-size: 24px;
 	color: #FFAE53;
 	letter-spacing: 2.78px;
 	margin-bottom: 15px;
